Major Dashboard Improvements: Smart Charts & Better Navigation
Line Chart Enhancements:
- Only show tooltips on high and low points for cleaner experience
- Tooltips display 'High' and 'Low' labels with precise values
- Removed excessive data point tooltips for professional appearance
- Enhanced tooltip filtering for better user experience

Functional Timeframes:
- Made 1H, 1D, 1W, 1M, 1Y, ALL timeframes fully functional
- Each timeframe shows accurate data periods and intervals
- 1H: 12 five-minute intervals with time labels
- 1D: 24 hourly data points with time labels
- 1W: 7 daily data points with day labels
- 1M: 30 daily data points with date labels
- 1Y: 12 monthly data points with month labels
- ALL: 24 monthly data points with year/month labels

Smart Data Generation:
- Chart data now reflects actual portfolio value as baseline
- Realistic volatility scaling based on timeframe duration
- Longer timeframes show appropriate volatility increases
- Trend factors create more realistic price movements
- All data points properly rounded to 2 decimal places

Navigation Improvements:
- Fixed bottom navigation to stay below all content
- Changed from fixed positioning to relative positioning
- Added proper margin spacing above navigation
- Navigation no longer overlaps content or assets
- Improved mobile responsiveness for navigation

User Experience:
- Clicking timeframe buttons now actively changes chart data
- Visual feedback with active button states
- Charts update smoothly when switching timeframes
- Professional financial chart appearance
- Better content flow and layout structure

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
             </div>
 
             <div class="timeframe-selectors">
-                <button class="timeframe-btn">1H</button>
-                <button class="timeframe-btn active">1D</button>
-                <button class="timeframe-btn">1W</button>
-                <button class="timeframe-btn">1M</button>
-                <button class="timeframe-btn">1Y</button>
-                <button class="timeframe-btn">ALL</button>
+                <button class="timeframe-btn" onclick="switchTimeframe('1H')">1H</button>
+                <button class="timeframe-btn active" onclick="switchTimeframe('1D')">1D</button>
+                <button class="timeframe-btn" onclick="switchTimeframe('1W')">1W</button>
+                <button class="timeframe-btn" onclick="switchTimeframe('1M')">1M</button>
+                <button class="timeframe-btn" onclick="switchTimeframe('1Y')">1Y</button>
+                <button class="timeframe-btn" onclick="switchTimeframe('ALL')">ALL</button>
             </div>
         </div>
 
