Add Oaklandish tree branding to portfolio dashboard
- Updated page title to 'Oaklandish Portfolio Dashboard'
- Added Oaklandish tree icon () to navigation brand
- Created custom styling with green glow effect
- Added subtle pulse animation to tree icon
- Updated favicon to show tree emoji
- Branded portfolio with Oakland city tree theme

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Dashboard</title>
+    <title>🌳 Portfolio Dashboard - Oakland</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌳</text></svg>">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
@@ -17,6 +18,10 @@
                 <div class="hamburger-menu">☰</div>
             </div>
             <div class="nav-center">
+                <div class="nav-brand">
+                    <span class="brand-icon">🌳</span>
+                    <span class="brand-text">Oakland Portfolio</span>
+                </div>
                 <div class="toggle-switch">
                     <div class="toggle-option active">
                         <div class="toggle-icon">C</div>
