--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🌳 Portfolio Dashboard - Oakland</title>
+    <title>🌳 Portfolio Dashboard</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌳</text></svg>">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -20,7 +20,7 @@
             <div class="nav-center">
                 <div class="nav-brand">
                     <span class="brand-icon">🌳</span>
-                    <span class="brand-text">Oakland Portfolio</span>
+                    <span class="brand-text" id="portfolioName" contenteditable="true" title="Click to edit portfolio name">Oaklandish Portfolio</span>
                 </div>
                 <div class="toggle-switch">
                     <div class="toggle-option active">
